--- a/gtk/sass/4.0/_common.scss
+++ b/gtk/sass/4.0/_common.scss
@@ -5300,6 +5300,12 @@ paned {
     &.wide {
       background-repeat: repeat-y, repeat-y;
       background-position: left, right;
+
+      &:dir(ltr),
+      &:dir(rtl) { // reset spacing
+        margin: 0;
+        padding: 0;
+      }
     }
   }
 
@@ -5310,6 +5316,8 @@ paned {
     background-position: top;
 
     &.wide {
+      margin: 0; // reset spacing
+      padding: 0;
       background-repeat: repeat-x, repeat-x;
       background-position: bottom, top;
     }
